vonixcore-1.18.2-fabric-quilt-forge-template/fabric_errors.txt
./gradlew : WARNING: A restricted method in java.lang.System has 
been called
At line:1 char:1
+ ./gradlew :fabric:compileJava 2>&1 | Out-File -Encoding utf8 
fabric_e ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (WARNING: A rest...h 
   as been called:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
WARNING: java.lang.System::load has been called by 
net.rubygrapefruit.platform.internal.NativeLibraryLoader in an 
unnamed module (file:/C:/Users/ACER/.gradle/wrapper/dists/gradle-
8.14-bin/38aieal9i53h9rfe7vjup95b9/gradle-8.14/lib/native-platfor
m-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a 
warning for callers in this module
WARNING: Restricted methods will be blocked in a future release 
unless native access is enabled


> Configure project :
Architect Plugin: 3.4.162
Architectury Loom: 1.11.458

> Task :common:compileJava UP-TO-DATE
> Task :common:processResources UP-TO-DATE
> Task :common:classes UP-TO-DATE
> Task :common:jar UP-TO-DATE

> Task :fabric:compileJava FAILED
C:\Users\ACER\Desktop\Vonix-Network-Mods\vonixcore-architectury\v
onixcore-1.18.2-fabric-quilt-forge-template\fabric\src\main\java\
network\vonix\vonixcore\fabric\mixin\ServerGamePacketListenerMixi
n.java:31: warning: Unable to determine descriptor for @Inject 
target method
    @Inject(method = "broadcastChatMessage", at = @At("HEAD"), 
cancellable = true)
    ^
C:\Users\ACER\Desktop\Vonix-Network-Mods\vonixcore-architectury\v
onixcore-1.18.2-fabric-quilt-forge-template\fabric\src\main\java\
network\vonix\vonixcore\fabric\mixin\ServerGamePacketListenerMixi
n.java:32: error: cannot find symbol
    private void vonixcore$onBroadcastChatMessage(net.minecraft.n
etwork.chat.PlayerChatMessage message,
                                                                 
           ^
  symbol:   class PlayerChatMessage
  location: package net.minecraft.network.chat
1 error
1 warning

[Incubating] Problems report is available at: file:///C:/Users/ACER/Desktop/Vonix-Network-Mods/vonixcore-architectury/vonixcore-1.18.2-fabric-quilt-forge-template/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':fabric:compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\ACER\Desktop\Vonix-Network-Mods\vonixcore-architectury
\vonixcore-1.18.2-fabric-quilt-forge-template\fabric\src\main\jav
a\network\vonix\vonixcore\fabric\mixin\ServerGamePacketListenerMi
xin.java:31: warning: Unable to determine descriptor for @Inject 
target method
      @Inject(method = "broadcastChatMessage", at = @At("HEAD"), 
cancellable = true)
      ^
  C:\Users\ACER\Desktop\Vonix-Network-Mods\vonixcore-architectury
\vonixcore-1.18.2-fabric-quilt-forge-template\fabric\src\main\jav
a\network\vonix\vonixcore\fabric\mixin\ServerGamePacketListenerMi
xin.java:32: error: cannot find symbol
      private void vonixcore$onBroadcastChatMessage(net.minecraft
.network.chat.PlayerChatMessage message,
                                                                 
             ^
    symbol:   class PlayerChatMessage
    location: package net.minecraft.network.chat
  1 error
  1 warning

* Try:
> Check your code and dependencies to fix the compilation 
error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
4 actionable tasks: 1 executed, 3 up-to-date
